--- a/Capstone_Project_040920.ipynb
+++ b/Capstone_Project_040920.ipynb
@@ -491,8 +491,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CLIENT_ID = 'ZSICMFA5K2WF0C0TS2YWCTUPLZMTI5NVK2XQTQQX051X03XR' # My Foursquare ID\n",
-    "CLIENT_SECRET = '3NBOM130HQSFBV4CAJKN54GBP1FAAZARZXX4X3RLHDB5UMBV' # My Foursquare Secret\n",
+    "CLIENT_ID = '' # My Foursquare ID\n",
+    "CLIENT_SECRET = '' # My Foursquare Secret\n",
     "VERSION = '20180604'\n",
     "LIMIT = 100\n",
     "#radius = 80 # radius in meters, 80 meters is about one NYC block\n",
